--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="727a61">  <td>20/09/14 16:49:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Shopping.beforeClass()[pri:0, instance:pe.edu.galaxy.Shopping@3ee0fea4]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1840976765</td>   <td></td> </tr>
-<tr bgcolor="727a61">  <td>20/09/14 16:49:31</td>   <td>11936</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Shopping.getLisProducts()[pri:1, instance:pe.edu.galaxy.Shopping@3ee0fea4]">getLisProducts</td> 
-  <td>main@1840976765</td>   <td></td> </tr>
-<tr bgcolor="727a61">  <td>20/09/14 16:49:31</td>   <td>12085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Shopping.addFirstItem()[pri:2, instance:pe.edu.galaxy.Shopping@3ee0fea4]">addFirstItem</td> 
-  <td>main@1840976765</td>   <td></td> </tr>
-<tr bgcolor="727a61">  <td>20/09/14 16:49:40</td>   <td>20925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Shopping.addMoreItem()[pri:3, instance:pe.edu.galaxy.Shopping@3ee0fea4]">addMoreItem</td> 
-  <td>main@1840976765</td>   <td></td> </tr>
-<tr bgcolor="727a61">  <td>20/09/14 16:49:53</td>   <td>34901</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Shopping.shippingAddress()[pri:4, instance:pe.edu.galaxy.Shopping@3ee0fea4]">shippingAddress</td> 
-  <td>main@1840976765</td>   <td></td> </tr>
-<tr bgcolor="727a61">  <td>20/09/14 16:50:00</td>   <td>41836</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Shopping.completeOrder()[pri:5, instance:pe.edu.galaxy.Shopping@3ee0fea4]">completeOrder</td> 
-  <td>main@1840976765</td>   <td></td> </tr>
-<tr bgcolor="727a61">  <td>20/09/14 16:50:05</td>   <td>46393</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Shopping.afterClass()[pri:0, instance:pe.edu.galaxy.Shopping@3ee0fea4]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1840976765</td>   <td></td> </tr>
+<tr bgcolor="c49fae">  <td>20/09/15 20:12:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Shopping.beforeClass()[pri:0, instance:pe.edu.galaxy.Shopping@4034c28c]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1307904972</td>   <td></td> </tr>
+<tr bgcolor="c49fae">  <td>20/09/15 20:12:17</td>   <td>8201</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Shopping.getLisProducts()[pri:1, instance:pe.edu.galaxy.Shopping@4034c28c]">getLisProducts</td> 
+  <td>main@1307904972</td>   <td></td> </tr>
+<tr bgcolor="c49fae">  <td>20/09/15 20:12:17</td>   <td>8305</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Shopping.addFirstItem()[pri:2, instance:pe.edu.galaxy.Shopping@4034c28c]">addFirstItem</td> 
+  <td>main@1307904972</td>   <td></td> </tr>
+<tr bgcolor="c49fae">  <td>20/09/15 20:12:26</td>   <td>16852</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Shopping.addMoreItem()[pri:3, instance:pe.edu.galaxy.Shopping@4034c28c]">addMoreItem</td> 
+  <td>main@1307904972</td>   <td></td> </tr>
+<tr bgcolor="c49fae">  <td>20/09/15 20:12:40</td>   <td>30619</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Shopping.shippingAddress()[pri:4, instance:pe.edu.galaxy.Shopping@4034c28c]">shippingAddress</td> 
+  <td>main@1307904972</td>   <td></td> </tr>
+<tr bgcolor="c49fae">  <td>20/09/15 20:12:47</td>   <td>38260</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Shopping.completeOrder()[pri:5, instance:pe.edu.galaxy.Shopping@4034c28c]">completeOrder</td> 
+  <td>main@1307904972</td>   <td></td> </tr>
+<tr bgcolor="c49fae">  <td>20/09/15 20:12:52</td>   <td>42480</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Shopping.afterClass()[pri:0, instance:pe.edu.galaxy.Shopping@4034c28c]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1307904972</td>   <td></td> </tr>
 </table>
